--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
   
    <build>
        <plugins>
+     <plugin>
+       <groupId>org.codehaus.mojo</groupId>
+       <artifactId>cobertura-maven-plugin</artifactId>
+       <version>2.7</version>
+     </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
